Fix flashing on details container due to overflow

--- a/src/index.css
+++ b/src/index.css
@@ -97,21 +97,22 @@ body {
 .title-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  padding-left: 20px;
   height: 65px;
-  background-color: var(--color-white);
+  background-color: var(--color-middarkblue);
   z-index: 10;
 }
 
 .title {
-  color: var(--color-darkblue);
+  color: var(--color-white);
 }
 .title::after {
   content: "";
   display: block;
   width: 100%;
   height: 2px;
-  /* background-color: var(--color-white); */
+  background-color: var(--color-white);
   margin-top: 4px;
 }
 
@@ -204,7 +205,7 @@ body {
   height: 65px;
   background-color: var(--color-white);
   z-index: 1;
-  box-shadow: 0 0 2rem 0 rgba(41, 48, 66, 0.1);
+  /* box-shadow: 0 0 2rem 0 rgba(41, 48, 66, 0.1); */
 }
 
 .search-bar-container {
@@ -292,7 +293,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: var(--color-gray);
-  overflow-y: auto;
+  overflow-y: scroll; /* Enable scrolling */
 }
 
 /* Custom scrollbar for details */
